--- a/Bluefruit/Base.lproj/LaunchScreen.storyboard
+++ b/Bluefruit/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,45 +19,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zHB-Mb-yZi" userLabel="titleView">
-                                <rect key="frame" x="47.5" y="236" width="280" height="128"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleAspectFit" image="info_adafruit_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Qvw-tp-0x9">
-                                        <rect key="frame" x="0.0" y="0.0" width="280" height="105"/>
-                                    </imageView>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Bluefruit LE Connect" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMH-IR-Ocv">
-                                        <rect key="frame" x="75" y="109" width="205" height="19"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                                        <color key="textColor" red="0.79215686269999996" green="0.79215686269999996" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <color key="shadowColor" cocoaTouchSystemColor="darkTextColor"/>
-                                    </label>
-                                </subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="HQ7-Kz-Q9g">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zHB-Mb-yZi" userLabel="titleView">
+                                <rect key="frame" x="47" y="425" width="280" height="128"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="HMH-IR-Ocv" secondAttribute="bottom" id="A30-HD-rk3"/>
-                                    <constraint firstAttribute="trailing" secondItem="Qvw-tp-0x9" secondAttribute="trailing" id="QD8-4I-Nrx"/>
-                                    <constraint firstItem="Qvw-tp-0x9" firstAttribute="top" secondItem="zHB-Mb-yZi" secondAttribute="top" id="W37-to-yTJ"/>
-                                    <constraint firstItem="HMH-IR-Ocv" firstAttribute="leading" secondItem="zHB-Mb-yZi" secondAttribute="leading" constant="75" id="b3u-oQ-zfV"/>
-                                    <constraint firstItem="Qvw-tp-0x9" firstAttribute="leading" secondItem="zHB-Mb-yZi" secondAttribute="leading" id="blb-gm-bOK"/>
-                                    <constraint firstAttribute="trailing" secondItem="HMH-IR-Ocv" secondAttribute="trailing" id="dnr-n2-oCJ"/>
-                                    <constraint firstItem="HMH-IR-Ocv" firstAttribute="top" secondItem="Qvw-tp-0x9" secondAttribute="bottom" constant="4" id="po7-j4-idL"/>
-                                </constraints>
                             </view>
+                            <imageView userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleAspectFit" misplaced="YES" image="info_adafruit_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Qvw-tp-0x9">
+                                <rect key="frame" x="47" y="455" width="280" height="105"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Bluefruit LE Connect" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HMH-IR-Ocv">
+                                <rect key="frame" x="122" y="564" width="205" height="19"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <color key="textColor" red="0.79215686269999996" green="0.79215686269999996" blue="0.79215686269999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="shadowColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="zHB-Mb-yZi" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.9" id="6oz-Jy-Dna"/>
+                            <constraint firstAttribute="trailing" secondItem="Qvw-tp-0x9" secondAttribute="trailing" constant="48" id="DaE-D6-HB7"/>
                             <constraint firstItem="zHB-Mb-yZi" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HSh-PI-Odf"/>
+                            <constraint firstItem="HMH-IR-Ocv" firstAttribute="top" secondItem="Qvw-tp-0x9" secondAttribute="bottom" constant="4" id="Jf0-u9-Iie"/>
+                            <constraint firstAttribute="trailing" secondItem="HMH-IR-Ocv" secondAttribute="trailing" constant="48" id="b8B-yD-wDy"/>
+                            <constraint firstItem="Qvw-tp-0x9" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="47" id="bvr-Mi-aXJ"/>
+                            <constraint firstItem="Qvw-tp-0x9" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="441" id="oq3-6i-66v"/>
+                            <constraint firstItem="HMH-IR-Ocv" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="122" id="qTy-Br-oQH"/>
+                            <constraint firstAttribute="bottom" secondItem="HMH-IR-Ocv" secondAttribute="bottom" constant="98" id="xyP-j5-rfQ"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Splash" width="375" height="667"/>
         <image name="info_adafruit_logo" width="280" height="105"/>
     </resources>
 </document>
